# src/Http/Controllers/Api/GenerateApiController.php
@@ -543,6 +543,8 @@ class GenerateApiController extends Controller
             'look_size' => 'nullable|integer|min:1|max:8',
             'look_id' => 'nullable|string|max:120',
             'look_payload' => 'nullable|array',
+            'look_mode' => 'nullable|string|in:strict_stored,guided,vendor',
+            'strict_stored_looks' => 'nullable|boolean',
             'aspect_ratio' => 'nullable|string|max:20',
             'resolution' => 'nullable|string|max:20',
             'seed' => 'nullable|integer',
@@ -585,6 +587,8 @@ class GenerateApiController extends Controller
             'look_size' => 'nullable|integer|min:1|max:8',
             'look_id' => 'nullable|string|max:120',
             'look_payload' => 'nullable|array',
+            'look_mode' => 'nullable|string|in:strict_stored,guided,vendor',
+            'strict_stored_looks' => 'nullable|boolean',
             'aspect_ratio' => 'nullable|string|max:20',
             'resolution' => 'nullable|string|max:20',
             'seed' => 'nullable|integer',
